--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -64,7 +64,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: .portfolio/public
+          path: portfolio/public
 
   # Deployment job
   deploy:
