--- a/portfolio/config.toml
+++ b/portfolio/config.toml
@@ -11,7 +11,7 @@ paginate= 10
   dateformNumTime = "2006-01-02 15:04"
 
   # Subtitle for home
-  homeSubtitle = "This is my blog"
+  homeSubtitle = "This is my personal portfolio"
 
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
   disableReadOtherPosts = false
