--- a/portfolio/config.toml
+++ b/portfolio/config.toml
@@ -76,7 +76,7 @@ paginate     = 10
     [[menu.main]]
       identifier = "CV"
       name       = "Curriculum Vitae"
-      url        = "https://drive.google.com/file/d/1rgGzm8auAJBJU6OV__Iqg-LUSWzn7nZ8/view?usp=sharing"
+      url        = "https://drive.google.com/file/d/1b8Y6-ML4TlZtxRAZa4MSiRGNBc7IxHx2/view?usp=drive_link"
 
 
 
