--- a/portfolio/config.toml
+++ b/portfolio/config.toml
@@ -5,6 +5,9 @@ languageCode = "en-us"
 theme        = "hello-friend-ng"
 paginate     = 10
 
+- name: Download a Build Artifact
+  uses: actions/download-artifact@v4.3.0
+  
 [params]
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
